# ferroterm

./: Cargo.toml  Info.plist  README.md  ferroterm.toml.sample
benches/: config_bench.rs
examples/: config_demo.rs  input_demo.rs  keymap.toml  markdown_demo.rs  streaming_ui_demo.rs  tty_demo.rs
specs/: P0-002_tmux_compatible_multiplexer.md  P0-003_oci_crun_session_launcher.md  P0-006_privacy_and_telemetry.md  P0-007_minimal_config_and_auto_theme.md  ferroterm_ots.json  index-prd.md  pachyterm_ots.json  priority-mapping.md  tool-specs.md
specs/agent-subsystem/: response-history-prd.md
specs/config-state/: plain-text-config-prd.md
specs/core-runtime/: main-application-prd.md  markdown-terminal-renderer-prd.md  tty-engine-prd.md  window-management-prd.md
specs/distribution-operations/: installer-prd.md  security-prd.md  telemetry-prd.md
specs/extensibility/: plugin-sdk-prd.md
src/: agent_api.rs  command_parser.rs  command_parser_demo.rs  config.rs  dual_renderer.rs  input.rs  lib.rs  markdown_renderer.rs  media_display.rs  metal_backend.rs  model_host.rs  multiplexer.rs  oci_launcher.rs  os_agent.rs  profile_cache.rs  renderer.rs  security.rs  shared_memory.rs  simple_renderer.rs  streaming_ui.rs  telemetry.rs  terminal.rs  terminal_parser.rs  tty.rs
src/shaders/: metal_text.wgsl  text.wgsl
tests/: command_parser_test.rs
