[package]
name = "ferroterm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22"
notify = "6.1"
thiserror = "1.0"
dirs = "5.0"
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "term", "fs", "ioctl"] }
futures = "0.3"
tracing = "0.1"
wgpu = "0.19"
wgpu-hal = "0.19"
raw-window-handle = "0.6"
glyph_brush = "0.7"
font-kit = "0.11"
unicode-segmentation = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
regex = "1.10"
bytemuck = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
image = "0.24"
base64 = "0.21"
cosmic-text = "0.10"
swash = "0.1"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
serde_yaml = "0.9"
rusqlite = { version = "0.29", features = ["bundled"] }
gethostname = "0.4"
num_cpus = "1.0"
memmap2 = "0.9"
ring = "0.17"
crc32fast = "1.3"
winit = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
objc = "0.2"
pollster = "0.3"
pulldown-cmark = { version = "0.10", features = ["simd"] }
syntect = { version = "5.1", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
once_cell = "1.19"
unicode-width = "0.1"
textwrap = "0.16"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "ferroterm"
path = "src/bin/main.rs"

[[bench]]
name = "config_bench"
harness = false

[[example]]
name = "markdown_demo"
path = "examples/markdown_demo.rs"
